--- a/dinein/public/css/index.css
+++ b/dinein/public/css/index.css
@@ -9,6 +9,8 @@ section.top {
 .infoPara {
   grid-area: info;
   padding-top: 10em;
+  font-family: "Montserrat", sans-serif;
+  padding-right: 40px;
 }
 .logoImg {
   grid-area: logo;
@@ -43,12 +45,29 @@ h2 {
   text-align: center;
 }
 
+h3 {
+  text-align: left;
+  color: #26ab7b;
+  font-size: 17px;
+  font-stretch: condensed;
+  font-weight: 100;
+  margin: 0;
+}
+
+h4 {
+  text-align: left;
+  font-weight: bold;
+  margin: 0;
+  font-size: 30px;
+}
+
 p {
   font-size: 14px;
   font-weight: 100;
   line-height: 20px;
   letter-spacing: 0.5px;
-  margin: 20px 0 30px;
+  margin-top: 40px;
+  text-align: justify;
 }
 
 span {
@@ -98,6 +117,13 @@ input {
   padding: 12px 15px;
   margin: 8px 0;
   width: 100%;
+}
+
+.smallText {
+  color: #333;
+  font-size: 14px;
+  text-decoration: none;
+  margin: 15px 0;
 }
 
 .container {
