--- a/dinein/views/pages/index.ejs
+++ b/dinein/views/pages/index.ejs
@@ -14,6 +14,8 @@
         <img src="/images/dineInLogo.png" alt="Dine In Logo" />
       </div>
       <div class="infoPara">
+        <h3>About</h3>
+        <h4>Welcome to Dine In</h4>
         <p>
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quo atque
           nesciunt, consequatur vitae possimus quis at, nemo modi earum repellat
@@ -41,7 +43,7 @@
             <h1>Sign in</h1>
             <input type="email" placeholder="Email" />
             <input type="password" placeholder="Password" />
-            <a href="#">Forgot your password?</a>
+            <a href="#" class="smallText">Forgot your password?</a>
             <button>Sign In</button>
           </form>
         </div>
