--- a/dinein/views/partials/nav_bar.ejs
+++ b/dinein/views/partials/nav_bar.ejs
@@ -16,11 +16,17 @@
         flex-direction: row;
         /* align-content: center; */
         align-items: center;
+        
+        justify-content: space-between;
+      }
+
+      .mobile-nav-toggle {
+        display: none;
       }
 
       ul {
         font-family: "Montserrat", sans-serif;
-        width: 100%;
+        /* width: 100%; */
         list-style-type: none;
         margin: 0;
         padding: 0;
@@ -31,6 +37,9 @@
         font-weight: bold;
         letter-spacing: 1px;
         padding-right: 10px;
+
+        display: flex;
+        /* margin-inline-end: 0.75em; */
       }
       li {
         float: right;
@@ -88,11 +97,59 @@
       .dropdown:hover .dropdown-content {
         display: block;
       }
+
+      @media (max-width:35em){
+        ul {
+          display: flex;
+          position: fixed;
+          z-index: 1000;
+          inset: 0 0 0 30%;
+          flex-direction: column;
+          padding: min(20vh, 8rem) 1em;
+          background: hsl(0 0% 0% / 0.8);
+          /* background-color: #f6f5f7;  instead of blur*/
+          transform: translateX(100%);
+          transition: transform 350ms ease-out;
+        }
+
+        @supports (backdrop-filter: blur(1rem)){
+          ul {
+            background: hsl(0 0% 100% / 0.1);
+            backdrop-filter: blur(3rem);
+          }
+        }
+
+        ul[data-visible="true"] {
+          transform: translateX(0%);
+        }
+
+        .mobile-nav-toggle {
+          display: block;
+          position: fixed;
+          z-index: 9999;
+          background-color: transparent;
+          background-image: url("/images/hamburger-menu.png");
+          background-repeat: no-repeat;
+          background-size: 50px;
+          padding: 0;
+          margin: 0;
+          width: 50px;
+          aspect-ratio: 1;
+          top: 2rem;
+          right: 2rem;
+          border: 0;
+        }
+
+        .mobile-nav-toggle[data-visible="true"]{
+          background-image: url("images/menu-close.png");
+        }
+      }
     </style>
+    
   </head>
   <body>
     <div class="navigation_bar">
-      <a class="logo_img" href="/index.ejs"
+      <a class="logo_img" href="/"
         ><img
           src="/images/dineInLogoTransparent.png"
           alt="Dine In Logo"
@@ -100,9 +157,9 @@
           height="100px"
       /></a>
 
-      <ul>
-        <li><a class="Information_Link" href="/info.ejs"> Team </a></li>
-        <li><a class="Blog_Link" href="#"> Blog </a></li>
+      <button class="mobile-nav-toggle" data-visible="false"></button>
+
+      <ul class="link-list" data-visible="false">
         <li class="dropdown">
           <a href="javascript:void(0)" class="dropbtn">Recipes</a>
           <div class="dropdown-content">
@@ -111,7 +168,28 @@
             <a href="#">Dinner</a>
           </div>
         </li>
+        <li><a class="Blog_Link" href="#"> Blog </a></li>
+        <li><a class="Information_Link" href="/info"> Team </a></li>
       </ul>
     </div>
+
+    <script>
+      const linkList =  document.querySelector(".link-list");
+      const navToggle = document.querySelector(".mobile-nav-toggle");
+  
+      navToggle.addEventListener('click', ()=>{
+        const visibility = linkList.getAttribute("data-visible");
+
+        if(visibility === "false"){
+          linkList.setAttribute("data-visible", true);
+          navToggle.setAttribute("data-visible", true);
+        } else {
+          linkList.setAttribute("data-visible", false);
+          navToggle.setAttribute("data-visible", false);
+        }
+      });
+    </script>
+
   </body>
+  
 </html>
