--- a/dinein/public/css/index.css
+++ b/dinein/public/css/index.css
@@ -1,64 +1,108 @@
+@import url("https://fonts.googleapis.com/css?family=Montserrat:400,800");
+
 .top {
   text-align: center;
 }
 section.top {
   display: grid;
   grid-template-columns: repeat(2, 50%);
-  grid-template-areas: "logo info";
+  grid-template-areas: "info logo";
 }
 .infoPara {
   grid-area: info;
-  padding-top: 10em;
+  padding-top: 7em;
   font-family: "Montserrat", sans-serif;
-  padding-right: 40px;
+  padding-right: 30px;
+  line-height: 400%;
 }
 .logoImg {
   grid-area: logo;
+  
 }
 body {
-  background: #f6f5f7;
+  background: white;
 }
 
-@import url("https://fonts.googleapis.com/css?family=Montserrat:400,800");
-/* Source: Florin Pop https://codepen.io/FlorinPop17/pen/vPKWjd */
+.content-box {
+  padding: 0.3em;
+  background: #ff7;
+  column-count: 3;
+  column-rule: inset 2px #33f;
+}
 
+h1 {
+  text-align: left;
+  font-weight: bold;
+  margin: 0;
+  font-size: 70px;
+  color: #26ab7b;
+  padding-left: 10%;
+}
+
+h2 {
+  text-align: center;
+  font-family: "Montserrat", sans-serif;
+  font-size: 15px;
+  font-weight: 300;
+  line-height: 0px;
+  letter-spacing: 0.5px;
+}
+
+.row{
+  padding-top: 40px;
+  width: 60%;
+  padding-left: 40px;
+  padding-top: 20px;
+}
+
+.column-one {
+  float: left;
+  width: 33.33%;
+  height: 100px;
+  background-color: white;
+  align-items: center;
+  justify-content: center;
+}
+.column-two-three {
+  float: left;
+  width: 33.33%;
+  height: 100px;
+  background-color: white;
+  align-items: center;
+  justify-content: center;
+  border-left: solid 1px #d8d8d8de;
+}
+
+.icons{
+  margin-bottom: -15px;
+  margin-top: 0px;
+}
+
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Source: Florin Pop https://codepen.io/FlorinPop17/pen/vPKWjd */
 * {
   box-sizing: border-box;
 }
 
 .registration {
-  background: #f6f5f7;
+  background: white;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
   font-family: "Montserrat", sans-serif;
   height: 100vh;
-  margin: -20px 0 50px;
-}
-h1 {
-  font-weight: bold;
-  margin: 0;
-}
-
-h2 {
-  text-align: center;
+  margin: 20px;
 }
 
 h3 {
-  text-align: left;
-  color: #26ab7b;
-  font-size: 17px;
-  font-stretch: condensed;
-  font-weight: 100;
-  margin: 0;
-}
-
-h4 {
-  text-align: left;
   font-weight: bold;
   margin: 0;
-  font-size: 30px;
 }
 
 p {
@@ -66,8 +110,20 @@ p {
   font-weight: 100;
   line-height: 20px;
   letter-spacing: 0.5px;
-  margin-top: 40px;
+  margin-top: 10px;
   text-align: justify;
+  padding-left: 10%;
+}
+
+p-registration{
+  font-size: 14px;
+  font-weight: 100;
+  line-height: 20px;
+  letter-spacing: 0.5px;
+  text-align: center;
+  padding-left: 10%;
+  margin-top: 20px;
+  margin-bottom: 30px;
 }
 
 span {
