--- a/dinein/views/pages/index.ejs
+++ b/dinein/views/pages/index.ejs
@@ -11,27 +11,34 @@
     <%- include('../partials/nav_bar.ejs') %>
     <section class="top">
       <div class="logoImg">
-        <img src="/images/dineInLogo.png" alt="Dine In Logo" />
+        <img src="/images/utensils.jpeg" alt="Photo of utensils" />
       </div>
       <div class="infoPara">
-        <h3>About</h3>
-        <h4>Welcome to Dine In</h4>
-        <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quo atque
-          nesciunt, consequatur vitae possimus quis at, nemo modi earum repellat
-          doloribus eos, ipsa assumenda hic aut. Unde totam culpa quos, aperiam
-          neque doloremque architecto nulla odit provident harum dolorum illo
-          commodi maxime quo, accusantium et temporibus recusandae qui
-          voluptatem eius!
-        </p>
-      </div>
+        <h1>Welcome to dine in.</h1>
+        <p> We provide recipes for the busy chefs.</p>
+        <div class="row">
+          <div class="column-one">
+            <img src="/images/easyIcon.png" width="40px" height="40px" class="icons"/>
+            <!-- Source: "https://www.flaticon.com/free-icons/easy-to-use" -->
+            <h2>Easy</h2>
+          </div>
+          <div class="column-two-three">
+            <img src="/images/affordableIcon.png" width="40px" height="40px" class="icons"/>
+            <!-- Source: "https://www.flaticon.com/free-icons/savings" -->
+            <h2>Affordable</h2>
+          </div>
+          <div class="column-two-three">
+            <img src="/images/tastyIcon.png" width="40px" height="40px" class="icons"/>
+            <!-- Source:"https://www.flaticon.com/free-icons/delicious" -->
+            <h2>Delicious</h2>
+          </div>
+        </div>
     </section>
-
     <section class="registration">
       <div class="container" id="container">
         <div class="form-container sign-up-container">
           <form action="#">
-            <h1>Create Account</h1>
+            <h3>Create Account</h3>
             <input type="username" placeholder="Username" />
             <input type="email" placeholder="Email" />
             <input type="password" placeholder="Password" />
@@ -40,7 +47,7 @@
         </div>
         <div class="form-container sign-in-container">
           <form action="#">
-            <h1>Sign in</h1>
+            <h3>Sign in</h3>
             <input type="email" placeholder="Email" />
             <input type="password" placeholder="Password" />
             <a href="#" class="smallText">Forgot your password?</a>
@@ -50,15 +57,15 @@
         <div class="overlay-container">
           <div class="overlay">
             <div class="overlay-panel overlay-left">
-              <h1>Welcome Back!</h1>
-              <p>
+              <h3>Welcome Back!</h3>
+              <p-registration>
                 To keep dining with us please login with your personal info.
-              </p>
+              </p-registration>
               <button class="ghost" id="signIn">Sign In</button>
             </div>
             <div class="overlay-panel overlay-right">
-              <h1>Hello, Friend!</h1>
-              <p>Enter your personal details to start dining with us.</p>
+              <h3>Hello, Friend!</h3>
+              <p-registration>Enter your personal details to start dining with us.</p-registration>
               <button class="ghost" id="signUp">Sign Up</button>
             </div>
           </div>
