--- a/dinein/views/pages/index.ejs
+++ b/dinein/views/pages/index.ejs
@@ -46,10 +46,14 @@
             required/>
             <input 
             type="email" 
+            id="email"
+            name="email"
             placeholder="Email" 
             required/>
             <input 
             type="password" 
+            id="password"
+            name="password"
             placeholder="Password" 
             required/>
 
@@ -57,15 +61,18 @@
           </form>
         </div>
         <div class="form-container sign-in-container">
-<<<<<<< HEAD
           <form action="/signin" method="POST">
             <h1>Sign in</h1>
             <input 
-            type="email" 
+            type="email"
+            id="email"
+            name="email"
             placeholder="Email" 
             required/>
             <input 
             type="password" 
+            id="password"
+            name="password"
             placeholder="Password" 
             required/>
 
