--- a/dinein/views/partials/nav_bar.ejs
+++ b/dinein/views/partials/nav_bar.ejs
@@ -159,14 +159,15 @@
       <button class="mobile-nav-toggle" data-visible="false"></button>
 
       <ul class="link-list" data-visible="false">
-        <li class="dropdown">
-          <a href="javascript:void(0)" class="dropbtn">Recipes</a>
+        <!-- <li class="dropdown">
+          <a href="/recipes" class="dropbtn">Our Recipes</a>
           <div class="dropdown-content">
-            <a href="#">Breakfast</a>
+            <a href="/recipes">Breakfast</a>
             <a href="#">Lunch</a>
             <a href="#">Dinner</a>
           </div>
-        </li>
+        </li> -->
+        <li><a class="Recipes_Link" href="/recipes"> Our Recipes </a></li>
         <li><a class="Blog_Link" href="#"> Blog </a></li>
         <li><a class="Information_Link" href="/info"> Team </a></li>
       </ul>
