--- a/dinein/public/css/recipes.css
+++ b/dinein/public/css/recipes.css
@@ -24,6 +24,10 @@ a {
 
 p {
     font-family: "Montserrat", sans-serif;
+    font-size: 14px;
+    font-weight: 100;
+    line-height: 20px;
+    letter-spacing: 0.5px;
 }
    
 .recipe-center {
