--- a/dinein/views/pages/info.ejs
+++ b/dinein/views/pages/info.ejs
@@ -8,9 +8,8 @@
     <link rel="stylesheet" href="/css/info.css" />
   </head>
   <body>
+    <%- include('../partials/nav_bar.ejs') %>
     <div>
-      <%- include('../partials/nav_bar.ejs') %>
-
       <container class="container-header"
         ><div class="header">
           <div class="fixed">Meet the</div>
@@ -27,19 +26,19 @@
       <!-- Source for icons: Avatars created by rizal2109 - Flaticon -->
       <div class="row">
         <div class="col-pic">
-          <img src="/images/avatars/man2.png" alt="Avatar." />
+          <img class="avatars" src="/images/avatars/man2.png" alt="Avatar." />
         </div>
         <div class="col-pic">
-          <img src="/images/avatars/woman3.png" alt="Avatar." />
+          <img class="avatars" src="/images/avatars/woman3.png" alt="Avatar." />
         </div>
         <div class="col-pic">
-          <img src="/images/avatars/man4.png" alt="Avatar." />
+          <img class="avatars" src="/images/avatars/man4.png" alt="Avatar." />
         </div>
         <div class="col-pic">
-          <img src="/images/avatars/woman1.png" alt="Avatar." />
+          <img class="avatars" src="/images/avatars/woman1.png" alt="Avatar." />
         </div>
         <div class="col-pic">
-          <img src="/images/avatars/man3.png" alt="Avatar." />
+          <img class="avatars" src="/images/avatars/man3.png" alt="Avatar." />
         </div>
         <div class="col-name">Ernesto Montes</div>
         <div class="col-name">Isabella Garrido</div>
