--- a/dinein/views/pages/recipes.ejs
+++ b/dinein/views/pages/recipes.ejs
@@ -8,17 +8,8 @@
     <link rel="stylesheet" href="/css/recipes.css" />
   </head>
   <body>
-    <div>
-      <%- include('../partials/nav_bar.ejs') %>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt animi
-        voluptatem deleniti, cupiditate obcaecati illo, molestiae beatae ex
-        repellendus voluptate hic non? Libero accusantium excepturi maxime
-        tempora minus ipsa ipsam quos laboriosam adipisci, sunt esse praesentium
-        accusamus incidunt hic id nulla. Odit quisquam maxime ipsum repellat
-        dicta consequuntur similique soluta.
-      </p>
-    </div>
+    <div><%- include('../partials/nav_bar.ejs') %></div>
+    <h1>What's Your Craving?</h1>
     <section class="recipe-center">
       <div class="container">
         <input type="radio" id="All" name="categories" value="All" checked />
@@ -74,11 +65,32 @@
                       <a href="">Snacks</a>
                     </li>
                   </ol>
-                  <h2 class="post-title">
-                    <a href="" target="_blank">5 Recipes Under $5 </a>
+                  <h2 class="post-title" href="">
+                    5 Recipes Under $5
+                    <!-- <a href="" target="_blank">5 Recipes Under $5 </a> -->
                   </h2>
+                  <div class="post-body">
+                    <p>
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                      Sequi perferendis molestiae non nemo doloribus.
+                      Doloremque, nihil! At ea atque quidem!
+                    </p>
+                  </div>
                 </figcaption>
               </figure>
+              <div class="post-footer">
+                <div class="user">
+                  <img
+                    src="images/avatars/woman3.png"
+                    alt="User Image"
+                    class="user-image"
+                  />
+                  <div class="user-info">
+                    <h5>Jane Doe</h5>
+                    <small>April 24, 2022</small>
+                  </div>
+                </div>
+              </div>
             </article>
           </li>
           <li class="post" data-category="Dinner Lunch">
@@ -96,11 +108,32 @@
                       <a href="">Lunch</a>
                     </li>
                   </ol>
-                  <h2 class="post-title">
-                    <a href="" target="_blank">10 Recipes Under $10 </a>
+                  <h2 class="post-title" href="">
+                    10 Recipes Under $10
+                    <!-- <a href="" target="_blank">10 Recipes Under $10 </a> -->
                   </h2>
+                  <div class="post-body">
+                    <p>
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                      Sequi perferendis molestiae non nemo doloribus.
+                      Doloremque, nihil! At ea atque quidem!
+                    </p>
+                  </div>
                 </figcaption>
               </figure>
+              <div class="post-footer">
+                <div class="user">
+                  <img
+                    src="images/avatars/woman3.png"
+                    alt="User Image"
+                    class="user-image"
+                  />
+                  <div class="user-info">
+                    <h5>Jane Doe</h5>
+                    <small>April 24, 2022</small>
+                  </div>
+                </div>
+              </div>
             </article>
           </li>
           <li class="post" data-category="Breakfast Snacks">
@@ -118,13 +151,34 @@
                       <a href="">Snacks</a>
                     </li>
                   </ol>
-                  <h2 class="post-title">
-                    <a href="" target="_blank"
+                  <h2 class="post-title" href="">
+                    5 Ways to Spice Up Your Ramen
+                    <!-- <a href="" target="_blank"
                       >5 Ways to Spice Up Your Ramen
-                    </a>
+                    </a> -->
                   </h2>
+                  <div class="post-body">
+                    <p>
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                      Sequi perferendis molestiae non nemo doloribus.
+                      Doloremque, nihil! At ea atque quidem!
+                    </p>
+                  </div>
                 </figcaption>
               </figure>
+              <div class="post-footer">
+                <div class="user">
+                  <img
+                    src="images/avatars/woman3.png"
+                    alt="User Image"
+                    class="user-image"
+                  />
+                  <div class="user-info">
+                    <h5>Jane Doe</h5>
+                    <small>April 24, 2022</small>
+                  </div>
+                </div>
+              </div>
             </article>
           </li>
           <li class="post" data-category="Dessert Lunch">
@@ -142,9 +196,17 @@
                       <a href="">Dessert</a>
                     </li>
                   </ol>
-                  <h2 class="post-title">
-                    <a href="" target="_blank">Lorem Ipsum </a>
+                  <h2 class="post-title" href="">
+                    Lorem Ipsum
+                    <!-- <a href="" target="_blank">Lorem Ipsum </a> -->
                   </h2>
+                  <div class="post-body">
+                    <p>
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                      Sequi perferendis molestiae non nemo doloribus.
+                      Doloremque, nihil! At ea atque quidem!
+                    </p>
+                  </div>
                 </figcaption>
               </figure>
             </article>
@@ -161,9 +223,17 @@
                       <a href="">Dessert</a>
                     </li>
                   </ol>
-                  <h2 class="post-title">
-                    <a href="" target="_blank">Lorem Ipsum </a>
+                  <h2 class="post-title" href="">
+                    Lorem Ipsum
+                    <!-- <a href="" target="_blank">Lorem Ipsum </a> -->
                   </h2>
+                  <div class="post-body">
+                    <p>
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                      Sequi perferendis molestiae non nemo doloribus.
+                      Doloremque, nihil! At ea atque quidem!
+                    </p>
+                  </div>
                 </figcaption>
               </figure>
             </article>
@@ -180,9 +250,17 @@
                       <a href="">Lunch</a>
                     </li>
                   </ol>
-                  <h2 class="post-title">
-                    <a href="" target="_blank">Lorem Ipsum</a>
+                  <h2 class="post-title" href="">
+                    Lorem Ipsum
+                    <!-- <a href="" target="_blank">Lorem Ipsum</a> -->
                   </h2>
+                  <div class="post-body">
+                    <p>
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                      Sequi perferendis molestiae non nemo doloribus.
+                      Doloremque, nihil! At ea atque quidem!
+                    </p>
+                  </div>
                 </figcaption>
               </figure>
             </article>
@@ -199,9 +277,17 @@
                       <a href="">Breakfast</a>
                     </li>
                   </ol>
-                  <h2 class="post-title">
-                    <a href="" target="_blank">Lorem Ipsum </a>
+                  <h2 class="post-title" href="">
+                    Lorem Ipsum
+                    <!-- <a href="" target="_blank">Lorem Ipsum </a> -->
                   </h2>
+                  <div class="post-body">
+                    <p>
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                      Sequi perferendis molestiae non nemo doloribus.
+                      Doloremque, nihil! At ea atque quidem!
+                    </p>
+                  </div>
                 </figcaption>
               </figure>
             </article>
@@ -221,9 +307,17 @@
                       <a href="">Snacks</a>
                     </li>
                   </ol>
-                  <h2 class="post-title">
-                    <a href="" target="_blank">Lorem Ipsum </a>
+                  <h2 class="post-title" href="">
+                    Lorem Ipsum
+                    <!-- <a href="" target="_blank">Lorem Ipsum </a> -->
                   </h2>
+                  <div class="post-body">
+                    <p>
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                      Sequi perferendis molestiae non nemo doloribus.
+                      Doloremque, nihil! At ea atque quidem!
+                    </p>
+                  </div>
                 </figcaption>
               </figure>
             </article>
