formatted code in recipes.ejs

--- a/dinein/views/pages/recipes.ejs
+++ b/dinein/views/pages/recipes.ejs
@@ -18,12 +18,7 @@
         <input type="radio" id="Dessert" name="categories" value="Dessert" />
         <input type="radio" id="Dinner" name="categories" value="Dinner" />
         <input type="radio" id="Lunch" name="categories" value="Lunch" />
-        <input
-          type="radio"
-          id="Breakfast"
-          name="categories"
-          value="Breakfast"
-        />
+        <input type="radio" id="Breakfast" name="categories" value="Breakfast" />
 
         <ol class="filters">
           <li>
