--- a/dinein/views/pages/main.ejs
+++ b/dinein/views/pages/main.ejs
@@ -7,14 +7,16 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div><%- include('../partials/nav_bar.ejs') %></div>
     <% if (username) { %>
-     <h1><%= username %> </h1>
+     <a><%= username %> </a>
      <form action="/logout" method="POST">
         <button>Logout</button>
     </form>
     <% } %>
-    <!-- Add nav or menu to post a recipe, logout -->
+    <!-- TODO See if the logout button can be incorporated into the nav bar,
+    or at least made to look like it is a part of the nav bar-->
     something
+    <!-- Todo: Add post recipe button -->
 </body>
 </html>
