--- a/dinein/views/partials/nav_bar.ejs
+++ b/dinein/views/partials/nav_bar.ejs
@@ -169,7 +169,7 @@
           </div>
         </li> -->
         <li><a class="Recipes_Link" href="/recipes"> Our Recipes </a></li>
-        <li><a class="Blog_Link" href="#"> Blog </a></li>
+        <li><a class="Blog_Link" href="/main"> Blog </a></li>
         <li><a class="Information_Link" href="/info"> Team </a></li>
       </ul>
     </div>
