--- a/dinein/views/pages/recipeTemplate.ejs
+++ b/dinein/views/pages/recipeTemplate.ejs
@@ -81,6 +81,7 @@
 </head>
 <body>
     <%- include('../partials/nav_bar.ejs') %>
+    <!-- Recipe template -->
     <div>
         <section class="top">
             <div class="recipeInfo">
@@ -105,11 +106,11 @@
         
         <label for="">Steps</label>
         <ol class="stepList">
-            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident ex, officia possimus optio magnam corporis ab consequatur repellendus doloremque atque inventore ea dolores. Inventore pariatur labore soluta quia dolore harum.</li>
-            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt, culpa eveniet. Impedit ab doloribus enim non nisi, minima in debitis ipsam aliquid molestias? Quaerat nemo numquam minima esse, repudiandae pariatur?</li>
-            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda nihil eum tenetur aliquid non, porro dicta. Omnis dignissimos, optio aperiam illo libero magni obcaecati repellendus velit animi harum, explicabo nesciunt.</li>
+            <li>Step 1</li>
+            <li>Step 2</li>
+            <li>Step 3</li>
         </ol>
     </div>
-
+    <!-- End of recipe template -->
 </body>
 </html>
